--- a/index.html
+++ b/index.html
@@ -8,21 +8,24 @@
   </head>
   <body>
     <div class="main-container">
-      <div class="a">
+      <div class="a d">
         <div class="a1"></div>
         <h1 class="b">CODING</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae ducimus dolorum nihil earum? Dolorum quas soluta dignissimos enim illo nam molestias recusandae aspernatur dolore.</p>
       </div>
-      <div class="a">
+      <div class="a a22">
         <div class="a2"></div>
-        <h1 class="b">COOKING</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae ducimus dolorum nihil earum? Dolorum quas soluta dignissimos enim illo nam molestias recusandae aspernatur dolore.</p>
+        <h1 class="b x">COOKING</h1>
+        <p class="x">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae ducimus dolorum nihil earum? Dolorum quas soluta dignissimos enim illo nam molestias recusandae aspernatur dolore.</p>
       </div>
-      <div class="a">
+      <div class="a d">
         <div class="a3"></div>
         <h1 class="b">CYCLING</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae ducimus dolorum nihil earum? Dolorum quas soluta dignissimos enim illo nam molestias recusandae aspernatur dolore.</p>
       </div>
+    </div>
+    <div>
+        <h1 class="z">FLEXBOX CSS</h1>
     </div>
   </body>
 </html>
